--- a/DataStructureAndAlgorithm.vcxproj.filters
+++ b/DataStructureAndAlgorithm.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="IntStack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ArrayIntQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IntStack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrayIntQueue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
