--- a/DataStructureAndAlgorithm.vcxproj.filters
+++ b/DataStructureAndAlgorithm.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="ArrayIntQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IntQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IntStack.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArrayIntQueue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IntQueue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
