--- a/DataStructureAndAlgorithm.vcxproj
+++ b/DataStructureAndAlgorithm.vcxproj
@@ -124,11 +124,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ArrayIntQueue.h" />
+    <ClInclude Include="DoubleEndedQueue.h" />
     <ClInclude Include="IntQueue.h" />
     <ClInclude Include="IntStack.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrayIntQueue.cpp" />
+    <ClCompile Include="DoubleEndedQueue.cpp" />
     <ClCompile Include="IntQueue.cpp" />
     <ClCompile Include="IntStack.cpp" />
     <ClCompile Include="main.cpp" />
