--- a/DataStructureAndAlgorithm.vcxproj.filters
+++ b/DataStructureAndAlgorithm.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="IntQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DoubleEndedQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IntStack.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IntQueue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DoubleEndedQueue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
