--- a/DataStructureAndAlgorithm.vcxproj.filters
+++ b/DataStructureAndAlgorithm.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Recur.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hanoi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IntStack.cpp">
